新增消息队列异步检测邮箱是否存在（已验证 但是outlook, gmail不行）

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,19 @@
 
     <dependencies>
 
+        <!-- RabbitMQ依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>dnsjava</groupId>
+            <artifactId>dnsjava</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+
         <!-- JWT -->
         <dependency>
             <groupId>com.auth0</groupId>
