--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,24 @@ spring:
       multipart:
           max-file-size: 10MB
           max-request-size: 10MB
+    rabbitmq:
+        host: 127.0.0.1
+        port: 5672
+        username: guest
+        password: guest
+        virtual-host: / # 虚拟host 可以不设置,使用server默认host
+        listener:
+            simple:
+                concurrency: 3 # 消费端的监听个数(即@RabbitListener开启几个线程去处理数据。)
+                max-concurrency: 3 # 消费端的监听最大个数
+                prefetch: 5
+                acknowledge-mode: auto # MANUAL:手动处理 AUTO:自动处理
+                default-requeue-rejected: true # 消费不成功的消息拒绝入队
+                retry:
+                    enabled: true # 开启消息重试
+                    max-attempts: 5 # 重试次数
+                    max-interval: 10000   # 重试最大间隔时间
+                    initial-interval: 2000  # 重试初始间隔时间
 
 
 mybatis-plus:
