--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
                 max-wait: -1
                 max-idle: 16
                 min-idle: 8
+        host: 127.0.0.1
+        port: 6379
     data:
         elasticsearch:
             repositories:
@@ -70,4 +72,6 @@ constant:
     token:
         expire-time: 2592000000
         refresh-time: 2592000000
+    tempFile:
+        avatar: 'classpath:/'
 
